--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-remark": "^1.7.1",
     "gatsby-transformer-sharp": "^1.6.1",
     "gatsby-transformer-yaml": "^1.5.7",
+    "local-web-server": "^2.2.4",
     "lodash": "^4.15.0",
     "react-fontawesome": "^1.6.1",
     "react-icons": "^2.2.5",
